[package]
name = "nqc"
version = "0.0.0"
edition = "2021"
authors = ["David Young <david@thedavidyoung.co.uk>"]
license = "MPL-2.0"
repository = "https://github.com/bricks-rs/rcx"
description = "[wip] Compiler for the NQC programming language for Lego RCX"
#readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
lalrpop-util = { version = "0.22.0", features = ["lexer"] }
miette = "7.4.0"
nom = "7.1.3"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "2.0.9"
tracing = "0.1.41"

[dev-dependencies]
insta = { version = "1.35.1", features = ["glob"] }
miette = { version = "7.4.0", features = ["fancy"] }
pretty_assertions = "1.4.0"

[build-dependencies]
askama = "0.12.1"
lalrpop = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
