[package]
name = "rcx"
version = "0.1.3"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/bricks-rs/rcx"
description = "Communicate with LEGO RCX bricks"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "motor"
required-features = ["examples"]

[[example]]
name = "light_sensor"
required-features = ["examples"]

[features]
default = ["usbtower"]
usbtower = []
examples = ["usbtower", "dep:color-eyre"]

[dependencies]
thiserror = "1.0.56"

color-eyre = { version = "0.6", optional = true }
nom = "7.1.3"
hex = "0.4.3"
tracing = "0.1.40"
nqc = { version = "0.0.0", path = "../nqc" }

[dev-dependencies]
color-eyre = "0.6"
hex-literal = "0.4.1"
pretty_assertions = "1.4.0"

[build-dependencies]
askama = "0.12"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
